--- a/templates/plantillas/errorUsuario.html
+++ b/templates/plantillas/errorUsuario.html
@@ -17,7 +17,7 @@
                 <div id="formFooter">
                     <div class ="row">
                         
-                        <ul class = "col"><h1 class="text-white">Sistema Contable</h1></ul>   
+                        <ul class = "col"><h1 class="text-white">Admon Academica</h1></ul>   
                     </div>                     
                 </div>
                
