--- a/templates/plantillas/errorUsuario.html
+++ b/templates/plantillas/errorUsuario.html
@@ -24,7 +24,7 @@
                 <div class="fadeIn first" style ="margin-top:30px ;margin-bottom:30px;">
                     <h3>Error de autenticacion</h3>
                     <h3>Usuario y/o contrasena no validos</h3>
-    <a href="{% url 'admon:inicar_sesion' %}" class="btn btn-primary" style="color:white; background-color:#33CC00">Volver a intentar</a>
+    <a href="{% url 'admon:inicarsesion' %}" class="btn btn-primary" style="color:white; background-color:#33CC00">Volver a intentar</a>
                 </div>
               
                    
