--- a/templates/plantillas/crearEstudiante.html
+++ b/templates/plantillas/crearEstudiante.html
@@ -1,5 +1,11 @@
+{% extends 'base/base.html'%}
+
+{% block title %} Gestion de Estudiante {% endblock %}
+
+{% block encabezado %} Gestion de Estudiante {% endblock %}
+{% block content %}
 <div >
-        <div class="modal-content">
+        
         {% if object %}
         <form role="form" action="{% url 'admon:modificar_estudiante' object.pk %}" method="post">
         {% else %}
@@ -16,11 +22,12 @@
                         <div class="modal-footer">
                                 <div class="col-lg-12 text-right">
                                        <input type="submit" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" name="submit" value="Guardar">
-                                        <button type="button" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" style="background-color:#f6685e;color:white" onclick="return cerrar_modal()">
+                                        <button type="button" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" style="background-color:#f6685e;color:white" >
                                                 Cancelar
                                         </button>
                                 </div>
                         </div>
                 </form>
-        </div>
+        
 </div>
+{% endblock %}
