agregado: ver notas

--- a/templates/plantillas/evArmada.html
+++ b/templates/plantillas/evArmada.html
@@ -15,7 +15,7 @@
            
            <br><br>
            
-            <a href="{% url 'admon:armarEvaluacion' %}" class="btn btn-success" style="color:white; background-color:#33CC00"> SI </a>
+            <a href="{% url 'admon:armarEvaluacion' %}" class="btn btn-success" style="color:white; background-color:#33CC00"> SI, Crear Otra </a>
 
             <a href="{% url 'admon:gestionEvaluacion' %}" class="btn btn-success" style="color:white; background-color:#f6685e"> No </a><br>
 
