--- a/templates/plantillas/crearMateria.html
+++ b/templates/plantillas/crearMateria.html
@@ -1,10 +1,10 @@
 {% extends 'base/base.html'%}
 
-{% block title %}crear Estudiante {% endblock %}
+{% block title %}crear Materia {% endblock %}
 
-{% block encabezado %}Crear Estudiante {% endblock %}
+{% block encabezado %}Crear Materia {% endblock %}
 {% block content %}
-<h3> Crear Nuevo Estudiante</h3>
+<h3> Crear Nueva Materia</h3>
 <br>
 <br>
 
@@ -21,7 +21,7 @@
 
                         <input type="submit"  class="btn btn-success" style="background-color:#33CC00;color:white" name="submit" value="Aceptar">
 
-                        <a href="{% url 'admon:listado_Estudiante' %}" class="btn btn-success" style="color:white; background-color:#f6685e">Regresar</a>
+                        <a href="{% url 'admon:listado_Materia' %}" class="btn btn-success" style="color:white; background-color:#f6685e">Regresar</a>
                  
                  
                </tr>
