--- a/templates/plantillas/secretaria.html
+++ b/templates/plantillas/secretaria.html
@@ -22,6 +22,7 @@
 			<th style="text-align: center">Estudiantes</th>
 			<th style="text-align: center">Materias</th>
 			<th style="text-align: center">Grados</th>
+			<th style="text-align: center">Evaluaciones de profesores</th>
 		</tr>
 		
 					<tr>
@@ -38,6 +39,9 @@
 				</td>
 				<td style="text-align:center;">
 					<a href="{% url 'admon:listado_Grado' %}" class="btn"><span class="glyphicon glyphicon-pencil">Grados</a>
+				</td>
+				<td style="text-align:center;">
+					<a href="{% url 'admon:gestionEvaluacion' %}" class="btn"><span class="glyphicon glyphicon-pencil">Evaluaciones de profesores</a>
 				</td>
 					</tr>
 		
