--- a/templates/plantillas/verNotas.html
+++ b/templates/plantillas/verNotas.html
@@ -34,7 +34,7 @@
         <td>
             {% for m in m %}
             <tr>
-                <td style="text-align: center">{{m.codMat}}</td>  
+                <td style="text-align: center">{{m.nomMat}}</td>  
                 <td>
                 {% for r in r %} <!-- Info por materia-->
                     <tr>
