--- a/templates/plantillas/registroNotas.html
+++ b/templates/plantillas/registroNotas.html
@@ -2,15 +2,14 @@
 
 {% block title %} Registro de notas {% endblock %}
 
-{% block encabezado %} Gestion de Profesor {% endblock %}
+{% block encabezado %} Registro de notas {% endblock %}
 {% block content %}
-<h3>Aqui puede registrar, modificar y eliminar los profesores</h3>
+<h3>Aqui puede registrar las notas de sus alumnos</h3>
 <div class="container">
 	<div class="row">
 
-	    <a href="{% url 'admon:crearProfesor' %}" class="btn btn-success" style="color:white; background-color:#33CC00">Crear Profesor</a>
-		</a>---
-		<a href="{% url 'admon:secretaria' %}" class="btn btn-success" style="color:white; background-color:#f6685e">Regresar a Gestion General</a>
+	    
+		
 		
 <div id="popup">
 	</div>
@@ -20,22 +19,20 @@
 <div class="row text-center">
 	<table  class="table table-sm">
 		<tr style="text-align: center">
-			<th style="text-align: center">Codigo del Profesor</th>
-			<th style="text-align: center">Nombre del Profesor</th>
-			<th style="text-align: center">Estado</th>
+			<th style="text-align: center">Codigo del Estudiante</th>
+			<th style="text-align: center">Nombres del Estudiante</th>
+			<th style="text-align: center">Apellidos del Estudiante</th>
 		</tr>
-		{% for pro in profesores %}
+		{% for est in estudiantes %}
 					<tr>
-						<td>{{pro.codPro}}</td>
-						<td>{{pro.nomPro}}</td>
-						<td>{{pro.estado}}
+						<td>{{est.nieEst}}</td>
+						<td>{{est.nomEst}}</td>
+						<td>{{est.apeEst}}
 						<td style="text-align:center;">
-					<a href="{% url 'admon:modificarPro' pro.pk %}" class="btn"><span class="glyphicon glyphicon-pencil">Modificar</a>
+					
 				</td>
 
-				<td style="text-align:center;">
-					<a href="#" onclick="return abrir_modal('{% url 'admon:eliminarPro' pro.pk %}', 'Emiminar/{{ pro.codPro}}')" class="btn"><span class="glyphicon glyphicon-trash"></span>Eliminar</a>
-				</td>
+				
 					</tr>
 		{% endfor %}
 	</table>
